--- a/Corporate-training.html
+++ b/Corporate-training.html
@@ -200,17 +200,17 @@
 
 								<p>Corporate Training is more important than ever as companies strive to remain competitive in the marketplace. Subhujo Technologies provides customized corporate training tailored to your organization's specific needs, delivering a range of in-house training, public seminars, and coaching services to help drive greater energy, focus and vision. Corporate training from Subhujo Technologies enables your employees to be clear, motivated and focused on their tasks, ultimately contributing to an overall increase in personal and professional effectiveness. </p>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								
 
 								<div class="my-4">
 									<ul class="list list-icons list-primary list-borders m-0">
-										<li><i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.</li>
-										<li><i class="fas fa-check"></i> Quisque ut nulla at nunc vehicula lacinia.</li>
-										<li><i class="fas fa-check"></i> Vestibulum ante ipsum primis in faucibus orci luctus.</li>
+										<li><i class="fas fa-check"></i> Subhujo Technologies provides the best corporate training solutions using the latest in technology.</li>
+										<li><i class="fas fa-check"></i>You can rest assured that your employees are being given the most up-to-date and effective training available. </li>
+										<li><i class="fas fa-check"></i>The Subhujo team is comprised of experienced professionals who understand how to utilize technology for training purposes.</li>
 									</ul>
 								</div>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>Corporate training is an important component of any successful organization’s development efforts and Subhujo Technologies knows that it takes exceptional facilitators to provide the best learning experiences. Our instructors and subject matter experts bring expertise from various national and international organizations, providing a diverse source of knowledge and original ideas tailored to fulfill any training needs. We design courses based on modern education methods, using techniques such as experiential learning tools to ensure our trainees are engaged for the full duration of their course. Corporate strategies, skills enhancement and personal growth are put at the forefront of all our programs – ensuring outcomes will benefit employees long into the future.</p>
 
 								<!-- <div class="row align-items-center my-5">
 									<div class="col-lg-7 position-relative mb-5 mb-lg-0">
@@ -225,7 +225,7 @@
 									</div>
 								</div> -->
 
-								<p class="pt-lg-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
+								
 
 								<div class="my-4">
 									<div class="row process">
@@ -268,7 +268,7 @@
 									</div>
 								</div>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>At Subhujo Technologies, we understand the importance of Corporate Training in helping businesses move forward. We believe that it is essential to analyse the learning needs of a workforce, so we carry out thorough assessments to identify any gaps in skills or knowledge. Once these needs have been identified and determined, our team at Subhujo Technologies will design individualised training programmes for each staff member to develop their abilities - this then provides the foundation for us to deliver the tailored training sessions across multiple platforms. To ensure that Corporate Training is having a positive effect, we evaluate the employee's knowledge and skills before and after using quantitative measures. In this way, Corporate Training can be truly maximised and its full potential reached.</p>
 
 							</div>
 
