--- a/Datawarehousing.html
+++ b/Datawarehousing.html
@@ -244,7 +244,7 @@
 												<strong class="process-step-circle-content">2</strong>
 											</div>
 											<div class="process-step-content">
-												<h4 class="mb-1 text-4 font-weight-bold">Data Acqulisation</h4>
+												<h4 class="mb-1 text-4 font-weight-bold">Design</h4>
 												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas risus est, dignissim non urna at, efficitur cursus nibh. Curabitur varius vel mauris at auctor. Nam ullamcorper bibendum est et porta. Donec congue libero vitae semper varius. Vivamus eu congue leo. Morbi molestie aliquet magna ac dignissim.</p>
 											</div>
 										</div>
@@ -253,7 +253,7 @@
 												<strong class="process-step-circle-content">3</strong>
 											</div>
 											<div class="process-step-content">
-												<h4 class="mb-1 text-4 font-weight-bold">Data warehouse</h4>
+												<h4 class="mb-1 text-4 font-weight-bold">Development</h4>
 												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas risus est, dignissim non urna at, efficitur cursus nibh. Curabitur varius vel mauris at auctor. Nam ullamcorper bibendum est et porta. Donec congue libero vitae semper varius. Vivamus eu congue leo. Quisque ullamcorper elit at metus elementum condimentum. Sed orci augue, pellentesque in egestas quis, vestibulum non ex. Suspendisse tempus tellus ac augue iaculis suscipit.</p>
 											</div>
 										</div>
@@ -262,7 +262,7 @@
 												<strong class="process-step-circle-content">4</strong>
 											</div>
 											<div class="process-step-content">
-												<h4 class="mb-1 text-4 font-weight-bold">Data Delivery</h4>
+												<h4 class="mb-1 text-4 font-weight-bold">Testing</h4>
 												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas risus est, dignissim non urna at, efficitur cursus nibh. Curabitur varius vel mauris at auctor.</p>
 											</div>
 										</div>
@@ -271,7 +271,7 @@
 												<strong class="process-step-circle-content">5</strong>
 											</div>
 											<div class="process-step-content">
-												<h4 class="mb-1 text-4 font-weight-bold">Data Consumption</h4>
+												<h4 class="mb-1 text-4 font-weight-bold">Deployment</h4>
 												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas risus est, dignissim non urna at, efficitur cursus nibh. Curabitur varius vel mauris at auctor.</p>
 											</div>
 										</div>
