--- a/Offshore-development.html
+++ b/Offshore-development.html
@@ -204,13 +204,14 @@
 
 								<div class="my-4">
 									<ul class="list list-icons list-primary list-borders m-0">
-										<li><i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.</li>
-										<li><i class="fas fa-check"></i> Quisque ut nulla at nunc vehicula lacinia.</li>
-										<li><i class="fas fa-check"></i> Vestibulum ante ipsum primis in faucibus orci luctus.</li>
+										<li><i class="fas fa-check"></i>Access to top talent from anywhere in the world </li>
+										<li><i class="fas fa-check"></i>Democratized access to resources for companies of all sizes</li>
+										<li><i class="fas fa-check"></i> Increased efficiency and flexibility for businesses </li>
+										<li><i class="fas fa-check"></i> Cost effective outsourcing for development projects</li>
 									</ul>
 								</div>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>Offshore software development is a great choice for businesses looking to expand with the help of cost-effective resources. Subhujo Technologies can provide comprehensive services ranging from full stack mobile app and web solutions, UI/UX design, to quality assurance - no matter where you are in the world! Our developers come from hotspots like South America, Poland & India; areas known by their vast pool of talented personnel who offer business owners attractive rates on their custom programs.</p>
 
 								<!-- <div class="row align-items-center my-5">
 									<div class="col-lg-7 position-relative mb-5 mb-lg-0">
@@ -225,7 +226,7 @@
 									</div>
 								</div> -->
 
-								<p class="pt-lg-12 my-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
+								<p class="pt-lg-12 my-4">Subhujo Technologies provides businesses with a reliable, cost-effective solution for software development projects: offshore services. Working with our remote and offsite teams allows companies to find the exact expertise they need while avoiding high labor costs associated with local talent. Using an international model of collaboration, we can create quality results in coding & product design as well as custom web applications and mobile apps – along with maintenance & support solutions that guarantee optimal performance long after project completion.</p>
 
 								<div class="my-4">
 									<div class="row process process-shapes process-shapes-always-animate">
@@ -268,7 +269,7 @@
 									</div>
 								</div>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>Subuhjo Technologies makes growing your business an easier and more affordable journey. With our Contractor ODC Model, you can access world class expertise without breaking the bank - enabling cost-effective wages customized to each country’s environment. Our Customer ODC Model gives unparalleled flexibility by delivering custom software development centers personalized to meet any need – creating a comprehensive global experience with ease!.</p>
 
 							</div>
 
