--- a/about-us.html
+++ b/about-us.html
@@ -178,13 +178,13 @@
 					<div class="container py-4">
 
 						<div class="row align-items-center">
-							<div class="col-md-6 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="1000">
+							<div class="col-md-6 " data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="1000">
 								<div class="owl-carousel owl-theme nav-inside mb-0" data-plugin-options="{'items': 1, 'margin': 10, 'animateOut': 'fadeOut', 'autoplay': true, 'autoplayTimeout': 6000, 'loop': true}">
 									<div>
-										<img alt="" class="img-fluid" src="img/generic/generic-corporate-3-2-full.jpg">
+										<img alt="" class="img-fluid" src="aboutpage/img/subhujotechnologies-homepage-whoweare-offficeimage-185x145.png">
 									</div>
 									<div>
-										<img alt="" class="img-fluid" src="img/generic/generic-corporate-3-3-full.jpg">
+										<img alt="" class="img-fluid" src="aboutpage/img/subhujotechnologies-homepage-whoweare-offficeimage-185x145.png">
 									</div>
 								</div>
 							</div>
@@ -192,8 +192,8 @@
 								<div class="overflow-hidden mb-2">
 									<h2 class="text-color-dark font-weight-normal text-7 mb-0 pt-0 mt-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="1200">Who <strong class="font-weight-extra-bold text-color-thick">We Are</strong></h2>
 								</div>
-								<p class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam <a href="#">vehicula</a> sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam. Donec ante risus, dapibus sed lectus non, lacinia vestibulum nisi. Morbi vitae augue quam. Nullam ac laoreet libero.</p>
-								<p class="mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1600">Consectetur adipiscing elit. Aliquam iaculis sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam.</p>
+								<p class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">Subhujo Technologies is known for its pioneering approach to developing groundbreaking solutions that help our clients achieve new levels of success. We bring together extensive industry knowledge, fast-paced problem solving skills, and the latest technological innovations to create tailored strategies that get companies where they want to go. Our commitment to providing the highest quality services has made Subhujo a global benchmark in the IT sector.</p>
+								<p class="mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1600"> Subhujo's expansive service portfolio covers everything from general IT operations support through specialized industry-based projects - allowing us to provide comprehensive, cost-effective solutions across a wide range of industries. Subujo stands at the vanguard of IT innovation, helping you drive tangible results quickly and efficiently.</p>
 							</div>
 						</div>
 
@@ -208,7 +208,7 @@
 								<section class="toggle active mt-0">
 									<a class="toggle-title">Our Vision</a>
 									<div class="toggle-content">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. Etiam nec viverra arcu. Morbi vitae augue quam. Nullam ac laoreet libero.</p>
+										<p>Subhujo Technologies envisions a world where technology creates infinite possibilities, empowering people to do great things. We are dedicated to creating innovative and impactful solutions that improve the lives of our customers worldwide.</p>
 									</div>
 								</section>
 								
@@ -219,7 +219,7 @@
 								<section class="toggle active mt-0">
 									<a class="toggle-title">Our Mission</a>
 									<div class="toggle-content">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor.</p>
+										<p>our mission is to create innovative solutions that drive technological progress and make a meaningful impact in the world. We’re committed to transforming businesses through advanced technology with remarkable results!</p>
 									</div>
 								</section>
 							</div>
@@ -564,7 +564,7 @@
 				<!-- projects end -->
 
 				<!-- scrollable parallax -->
-				<section class="parallax section section-text-light section-parallax section-center py-0 my-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'scrollableParallax': true, 'scrollableParallaxMinWidth': 991, 'startOffset': 10, 'cssProperty': 'width', 'cssValueStart': 40, 'cssValueEnd': 100, 'cssValueUnit': 'vw'}" data-image-src="img/parallax/parallax-2.jpg">
+				<section class="parallax section section-text-light  section-parallax section-center py-0 my-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'scrollableParallax': true, 'scrollableParallaxMinWidth': 991, 'startOffset': 10, 'cssProperty': 'width', 'cssValueStart': 40, 'cssValueEnd': 100, 'cssValueUnit': 'vw'}" data-image-src="aboutpage/img/subhujotechnologies-aboutpage-getquote-1920x1280.jpg">
 					<div class="d-flex justify-content-center">
 						<div class="scrollable-parallax-wrapper">
 							<div class="container py-4 my-4">
