--- a/carrers.html
+++ b/carrers.html
@@ -199,17 +199,17 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="overflow-hidden mb-2">
-                    <h2 class="font-weight-normal text-7 mb-2 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="200">Find Your <strong class="font-weight-extra-bold">Opportunity</strong></h2>
+                    <h2 class="font-weight-normal text-7 mb-2 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="200">Find Your <strong class="font-weight-extra-bold text-color-thick">Opportunity</strong></h2>
                 </div>
-                <div class="overflow-hidden mb-4">
+                <!-- <div class="overflow-hidden mb-4">
                     <p class="lead mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc euismod facilisis neque, eu malesuada diam finibus non.</p>
-                </div>
-                <p class="text-color-light-3 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum magna ex, et faucibus lacus venenatis eget. Suspendisse potenti. Curabitur euismod facilisis neque, eu malesuada diam finibus non. Nullam nec vehicula leo. Morbi porta ante eu feugiat mollis.</p>
+                </div> -->
+                <p class="text-color-light-3 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">Subhujo Technologies is the perfect opportunity for those looking to take their career to the next level. Our innovative IT solutions can open up new vistas of possibilities, allowing you to do more with your skills and experience. We are committed to helping our staff reach their potential and unlock their true professional potential. Subhujo Technologies provides a supportive environment with plenty of available resources and training opportunities, so you'll be able to tackle any challenge that comes your way.</p>
             </div>
             <div class="col-lg-4">
                 <div class="testimonial testimonial-primary appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="800">
                     <blockquote>
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat. Curabitur euismod facilisis neque, eu malesuada diam.</p>
+                        <p class="mb-0">We offer plenty of opportunity for professional development and growth here at Subhujo Technologies. Our innovative IT solutions can help you reach your potential and take your career to the next level. Come join our team and see what we can do together!</p>
                     </blockquote>
                 </div>
             </div>
@@ -223,7 +223,7 @@
             <div class="row pb-4">
                 <div class="col-md-8">
                     <div class="appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="200">
-                        <h4 class="mt-2 mb-2">Current <strong>Openings</strong></h4>
+                        <h4 class="mt-2 mb-2">Current <strong class="text-color-thick">Openings</strong></h4>
 
                         <div class="accordion accordion-modern accordion-modern-grey-scale-1 without-bg mt-4" id="accordion11">
                             <div class="card card-default mb-2">
