--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 							</div>
 
 							<!-- Carousel Slide 2 -->
-							<div class="owl-item position-relative overlay overlay-show overlay-op-8 lazyload" data-bg-src="img/slides/slide-bg-2.jpg" style="background-size: cover; background-position: center;">
+							<div class="owl-item position-relative overlay overlay-show overlay-op-8 lazyload" data-bg-src="img/slides/slide-bg-performance.jpg" style="background-size: cover; background-position: center;">
 								<div class="container position-relative z-index-3 h-100">
 									<div class="row justify-content-center align-items-center h-100">
 										<div class="col-lg-6">
@@ -289,11 +289,11 @@
 						<div class="col-lg-5">
 							<div class="row mt-5 mt-lg-0">
 								<div class="col-md-8 col-lg-6 text-center text-lg-start mx-auto">
-									<img class="img-fluid m-3 my-0 mt-lg-5 pt-lg-5 appear-animation" src="img/office/our-office-4.jpg" alt="Office" data-appear-animation="expandIn" data-appear-animation-delay="200">
+									<img class="img-fluid m-3 my-0 mt-lg-5 pt-lg-5 appear-animation" src="img/homepage/subhujotechnologies-homepage-whoweare-185x145.png" alt="Office" data-appear-animation="expandIn" data-appear-animation-delay="200">
 								</div>
 								<div class="col-md-8 col-lg-6 ps-lg-0 text-center text-lg-start mx-auto">
-									<img class="img-fluid m-3 appear-animation" src="img/office/our-office-5.jpg" alt="Office" data-appear-animation="expandIn" data-appear-animation-delay="400">
-									<img class="img-fluid m-3 appear-animation" src="img/office/our-office-7.jpg" alt="Office" data-appear-animation="expandIn" data-appear-animation-delay="200">
+									<img class="img-fluid m-3 appear-animation" src="img/homepage/subhujotechnologies-aboutuspage-whoweare-1170x780.png" alt="Office" data-appear-animation="expandIn" data-appear-animation-delay="400">
+									<img class="img-fluid m-3 appear-animation" src="img/homepage/subhujotechnologies-homepage-whoweare-meeting-185x145.png" alt="Office" data-appear-animation="expandIn" data-appear-animation-delay="200">
 								</div>
 							</div>
 						</div>
@@ -585,7 +585,7 @@
 				<div class="flip-content my-4">
 					<img src="img/homepage/microsoft.png" class="img-fluid" alt="SAP "/>
 					<h4 class="font-weight-bold text-color-primary text-4">Microsoft Implementation & Support</h4>
-					<p >Enterprise systems are constantly changing within the business environment. To help our customers optimize their applications platform, services, and organizational performance.</p>	
+					<p >Enterprise systems are constantly changing within the business environment.To help our customers optimize their applications platform,services .</p>	
 				</div>
 			</div>
 			<div class="flip-back d-flex align-items-center p-5" style="background-image: url(img/homepage/subhujotechnologies-homepage-services-microsoftimplementation&support-390x350.png); background-size: cover; background-position: center;">
@@ -1038,19 +1038,19 @@
 								<div class="col-6 col-lg-5 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Services</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Application Development</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Offshore Development</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Corporate Training</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Datawarehousing</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Application-development">Application Development</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Offshore-development">Offshore Development</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Corporate-training">Corporate Training</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">Datawarehousing</a></li>
 									</ul>
 								</div>
 								<div class="col-6 col-lg-3 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Quick Links</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Home</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">About us</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Carrers</a></li>
-										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Contact us</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./">Home</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./about-us">About us</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./carrers">Carrers</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./contact">Contact us</a></li>
 									</ul>
 								</div>
 								
