--- a/contact.html
+++ b/contact.html
@@ -221,6 +221,11 @@
 								</div>
 								<div class="row">
 									<div class="form-group col">
+										<div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="form-group col">
 										<input type="submit" value="Send Message" class="btn btn-primary btn-modern" data-loading-text="Loading...">
 									</div>
 								</div>
@@ -233,11 +238,9 @@
 								<h4 class="text-primary mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="200">Get in <strong>Touch</strong></h4>
 							</div>
 							<div class="overflow-hidden mb-3">
-								<p class=" mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus.</p>
+								<p class=" mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Innovation is key to success in the IT industry. Let's innovate together and stay in touch.</p>
 							</div>
-							<div class="overflow-hidden">
-								<p class="mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius.</p>
-							</div>
+							
 
 							<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">
 								<h4 class="text-primary pt-5">Our <strong>Office</strong></h4>
@@ -358,7 +361,7 @@
 
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
-
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</body>
 </html>
 
