--- a/Sap.html
+++ b/Sap.html
@@ -13,8 +13,8 @@
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="shortcut icon" href="img/subhujotechnologies-logo.png" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="img/subhujotechnologies-logo.png">
 
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -188,10 +188,10 @@
 
 							<div class="owl-carousel owl-theme custom-dots my-0" data-plugin-options="{'items': 1, 'margin': 18, 'loop': true, 'nav': false, 'dots': true}">
 								<div>
-									<img src="img/demos/construction-2/services/services-2.jpg" class="img-fluid" alt="">
+									<img src="services/img/subhujotechnologies-servicespage-Sap-1050x390.png" class="img-fluid" alt="">
 								</div>
 								<div>
-									<img src="img/demos/construction-2/services/services-3.jpg" class="img-fluid" alt="">
+									<img src="services/img/subhujotechnologies-servicespage-Sap-two-1050x390.png" class="img-fluid" alt="">
 								</div>
 							</div>
 
