--- a/carrers.html
+++ b/carrers.html
@@ -13,8 +13,8 @@
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="shortcut icon" href="img/subhujotechnologies-logo.png" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="img/subhujotechnologies-logo.png">
 
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -185,7 +185,7 @@
 
 <div role="main" class="main">
 
-    <section class="page-header page-header-modern page-header-background page-header-background-md parallax overlay overlay-color-dark overlay-show overlay-op-5 mt-0" data-plugin-parallax data-plugin-options="{'speed': 1.2}" data-image-src="img/page-header/page-header-parallax.jpg">
+    <section class="page-header page-header-modern page-header-background page-header-background-md parallax overlay overlay-color-dark overlay-show overlay-op-5 mt-0" data-plugin-parallax data-plugin-options="{'speed': 1.2}" data-image-src="carrerpage/img/subhujotechnologies-carrerspage-topbanner-2300x550.png">
         <div class="container">
             <div class="row">
                 
@@ -374,10 +374,10 @@
                     <div class="appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="400">
                         <div class="owl-carousel owl-theme dots-inside mb-0 pb-0" data-plugin-options="{'items': 1, 'autoplay': true, 'autoplayTimeout': 4000, 'margin': 10, 'animateOut': 'fadeOut', 'dots': false}">
                             <div class="pb-5">
-                                <img alt="" class="img-fluid rounded" src="img/generic/generic-corporate-3-2-full.jpg">
+                                <img alt="" class="img-fluid rounded" src="carrerpage/img/subhujotechnologies-carrerspage-openings-1170x780.png">
                             </div>
                             <div class="pb-5">
-                                <img alt="" class="img-fluid rounded" src="img/generic/generic-corporate-3-3-full.jpg">
+                                <img alt="" class="img-fluid rounded" src="carrerpage/img/subhujotechnologies-carrerspage-jobopenings-hiringimage-1170x780.jpg">
                             </div>
                         </div>
 
