--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="shortcut icon" href="img/subhujotechnologies-logo.png" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="img/subhujotechnologies-logo.png">
 
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -1042,6 +1042,8 @@
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Offshore-development">Offshore Development</a></li>
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Corporate-training">Corporate Training</a></li>
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">Datawarehousing</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">SAP</a></li>
+										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="./Datawarehousing">testing</a></li>
 									</ul>
 								</div>
 								<div class="col-6 col-lg-3 mb-4 mb-lg-0 col-12">
