--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/subhujotechnologies-logo.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="img/subhujotechnologies-favicon-60x60.png" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="img/subhujotechnologies-logo.png">
 
 		<!-- Mobile Metas -->
@@ -58,8 +58,8 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="./">
-											<img alt="Porto" width="120" height="48" data-sticky-width="82"
-												data-sticky-height="40" src="img/home/subhujo-logo.png">
+											<img alt="Porto" width="150" height="38" data-sticky-width="82"
+												data-sticky-height="40" src="img/subhujotechnologies-logo-120x50.png">
 										</a>
 									</div>
 								</div>
