--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/subhujotechnologies-logo.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="img/subhujotechnologies-favicon-60x60.png" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="img/subhujotechnologies-logo.png">
 
 		<!-- Mobile Metas -->
@@ -65,8 +65,8 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="./">
-											<img alt="Porto" width="120" height="48" data-sticky-width="82"
-												data-sticky-height="40" src="img/home/subhujo-logo.png">
+											<img alt="Porto" width="150" height="38" data-sticky-width="82"
+												data-sticky-height="40" src="img/subhujotechnologies-logo-120x50.png">
 										</a>
 									</div>
 								</div>
@@ -180,7 +180,7 @@
 						<div class="owl-stage">
 
 							<!-- Carousel Slide 1 -->
-							<div class="owl-item position-relative" style="background-image: url(img/slides/slide-bg-performance.jpg); background-color: #2E3136; background-size: cover; background-position: center;">
+							<div class="owl-item position-relative overlay-color-primary" style="background-image: url(img/homepage/subhujo-application-development.jpg); background-color: #2E3136; background-size: cover; background-position: center;">
 								<div class="container position-relative z-index-1 h-100">
 									<div class="d-flex flex-column align-items-center justify-content-center h-100">
 										<h3 class="position-relative text-color-light text-5 line-height-5 font-weight-medium px-4 mb-2 appear-animation" data-appear-animation="fadeInDownShorter" data-plugin-options="{'minWindowWidth': 0}">
@@ -222,7 +222,7 @@
 							</div>
 
 							<!-- Carousel Slide 3 -->
-							<div class="owl-item position-relative overlay overlay-color-primary overlay-show overlay-op-8 lazyload" data-bg-src="img/slides/slide-bg-6.jpg" style="background-size: cover; background-position: center;">
+							<div class="owl-item position-relative overlay  overlay-show overlay-op-8 lazyload" data-bg-src="img/homepage/subhujotechnologies-homepage-ititesstaffing-1920x980.png" style="background-size: cover; background-position: center;">
 								<div class="container position-relative z-index-3 h-100">
 									<div class="row justify-content-center align-items-center h-100">
 										<div class="col-lg-6">
